<!--
  ~ Created On : 10/25/18 10:03 PM
  ~ Author : Aqil Prakoso
  ~ Copyright (c) 2018 iRevStudio
  ~
  -->

<resources>
    <string name="app_name">Football Schedule</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="versus">VS</string>
    <string name="goals">GOALS</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>

</resources>
